[tool.poetry]
name = "masters_degree_python_project_1"
version = "0.1.0"
description = "ДHomework for subject \"Base Python\""
authors = ["Iuliia <prusova.work@gmail.com>"]
packages = [
 { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"
